# Pyjion

./: .clang-format  .gitignore  .gitmodules  .readthedocs.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.manylinux  Dockerfile.manylinux.aarch64  Dockerfile.manylinux.x86_64  README.md  pyjion.runtimeconfig.json  pyproject.toml  setup.py
.devcontainer/: devcontainer.json
.github/: build-manylinux.sh  onefuzz-notifications.json
.github/workflows/: benchmark.yml  codeql-analysis.yml  maintenance.yml  master.yml  onefuzz.yml  wheel.yml
Docs/: requirements-doc.txt  requirements.txt
Docs/source/: api.rst  conf.py  debugging.rst  development.rst  disassembler.rst  graphing.rst  index.rst  limitations.rst  optimizations.rst
Tests/: Tests.cpp  conftest.py  pytest.ini  python_bad_tests.txt  python_smoke_tests.txt  python_tests.txt  python_tests_macos11.txt  python_tests_win.txt  requirements_test.txt  run_cpython_tests.py  run_libregr_tests.py  run_smoke_tests.py  test_absint.cpp  test_attr.py  test_basics.cpp  test_big_build.cpp  test_bigint.cpp  test_binary.py  test_builtins.py  test_class.cpp  test_class.py  test_compiler.cpp  test_containers.cpp  test_coro.cpp  test_dict.py  test_dis.py  test_exceptions.cpp  test_floats.py  test_functions.py  test_generators.py  test_globals.cpp  test_globals.py  test_graph.cpp  test_graph.py  test_ilgen.cpp  test_imports.py  test_inference.cpp  test_info.py  test_interns.py  test_iterators.py  (+26 more)
eng/: CMakeOptimizations.txt  CMakeProfiling.txt  install-dotnet.ps1  install-dotnet.sh
pyjion-lib/: README.md  build.proj
(+113 files in other folders)
